site: writing smart contracts, onboarding, offchain applications, and minor tuning

--- a/scalus-site/content/catalyst/index.mdx
+++ b/scalus-site/content/catalyst/index.mdx
@@ -9,7 +9,7 @@ sidebarTitle: Catalyst
 This section covers Catalyst projects that were funded by the Cardano community.
 
 ### Fund 11
-- [1100252 - Scalus - multiplatform Scala implementation of Cardano Plutus](https://projectcatalyst.io/funds/11/cardano-open-developers/scalus-multiplatform-scala-implementation-of-cardano-plutus)
+- Close-out report: [1100252 - Scalus - multiplatform Scala implementation of Cardano Plutus](/docs/catalyst/scalus-1100252)
 - Close-out report: [1100198 - Multiplatform Plutus Script Cost & Evaluation Library](/docs/catalyst/multiplatform-1100198)
 
 ### Fund 13
