--- a/scalus-site/content/catalyst/multiplatform-1100198.mdx
+++ b/scalus-site/content/catalyst/multiplatform-1100198.mdx
@@ -1,6 +1,6 @@
 ---
-title: Multiplatform Plutus Script Cost & Evaluation Library
-sidebarTitle: 1100198 - Multiplatform support
+title: Scalus - Multiplatform Plutus Script Cost & Evaluation Library
+sidebarTitle: 1100198 - Scalus Multiplatform support
 #display: hidden
 ---
 
@@ -9,13 +9,10 @@ sidebarTitle: 1100198 - Multiplatform support
 Catalyst Project Link:
 https://projectcatalyst.io/funds/11/cardano-open-developers/multiplatform-plutus-script-cost-and-evaluation-library-jsjvmllvm
 
-Project Number: 1100198 
-
-Project Manager: Alexander Nemish
-
-Date Project Started: 2024-03-11
-
-Date Project Completed: 2025-06-23
+- Project Number: 1100198 
+- Project Manager: Alexander Nemish
+- Date Project Started: 2024-03-11
+- Date Project Completed: 2025-06-23
 
 ## Project Description
 
@@ -26,6 +23,13 @@ The goal of this project was to create a multiplatform library for evaluating Pl
 calculating their execution budget on JVM, JavaScript, and Native platforms. The library is written
 in Scala 3 and compiles to all three platforms, providing a unified codebase that significantly
 reduces code duplication and enhances developer productivity.
+
+## Close-out Video
+
+<iframe width="800" height="450" src="https://www.youtube.com/embed/Yho7KoqjlVU?si=GEnhixjnnWxsX1Mn" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
+
+There I demonstrate the Plutus V2 script evaluation and execution cost calculation on 3 platforms:
+JVM, JavaScript, and Native.
 
 ## List of Challenge/Project KPIs and How the Project Addressed Them
 
@@ -142,11 +146,3 @@ development.
 * [Scalus Starter Project](https://github.com/lantr-io/scalus-starter)
 * [Lantr](https://lantr.io)
 * [BloxBean Cardano Client Library](https://cardano-client.dev)
-
-## Link to Close-out Video
-
-Here is the link to the full Scalus multiplatform capabilities video
-presentation: [https://youtu.be/A8MQsGn5XFo](https://youtu.be/A8MQsGn5XFo)
-
-There I demonstrate the Plutus V2 script evaluation and execution cost calculation on 3 platforms:
-JVM, JavaScript, and Native.
