--- a/scalus-site/content/catalyst/scalus-1100252.mdx
+++ b/scalus-site/content/catalyst/scalus-1100252.mdx
@@ -5,15 +5,11 @@ sidebarTitle: 1100252 - Scalus
 ---
 # Scalus - multiplatform Scala implementation of Cardano Plutus
 
-Catalyst Project Link: https://projectcatalyst.io/funds/11/cardano-open-developers/scalus-multiplatform-scala-implementation-of-cardano-plutus
-
-Project Number: 1100252
-
-Project Manager: Alexander Nemish
-
-Date Project Started: 2024-03-11
-
-Date Project Completed: 2025-10-14
+- Catalyst Project Link: https://projectcatalyst.io/funds/11/cardano-open-developers/scalus-multiplatform-scala-implementation-of-cardano-plutus
+- Project Number: 1100252
+- Project Manager: Alexander Nemish
+- Date Project Started: 2024-03-11
+- Date Project Completed: 2025-10-14
 
 ## Project Description
 
@@ -30,7 +26,9 @@ It also provides a full‑featured UPLC parser, pretty‑printer, and an evaluat
 on multiple platforms: JVM (Java, Kotlin, etc.), JavaScript (Node.js, browsers), and even Native (
 C/C++/Rust, etc.) via LLVM backend.
 
----
+## Close‑out Video
+
+<iframe width="750" height="450" src="https://www.youtube.com/embed/AlzYO5OLwBU?si=QWD1yqLltKLRI5j_" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen></iframe>
 
 ## Project KPIs • How We Addressed Them
 
@@ -109,7 +107,3 @@ de‑facto full‑stack platform for Cardano DApps.
 * Discord • [https://discord.gg/ygwtuBybsy](https://discord.gg/ygwtuBybsy)
 * Multiplatform evaluation & budgeting
   demo: [https://youtu.be/A8MQsGn5XFo](https://youtu.be/A8MQsGn5XFo)
-
-## Close‑out Video
-
-[Public demo of multiplatform evaluation & budgeting](https://www.youtube.com/watch?v=AlzYO5OLwBU)
