--- a/scalus-site/content/index.mdx
+++ b/scalus-site/content/index.mdx
@@ -3,24 +3,51 @@ import Image from 'next/image'
 
 # Introduction
 
-<Image src="/scalus-logo-dark.png" alt="Hello" width={400} height={400} style={{ display: 'block', margin: '0 auto' }} />
+<Image src="/scalus-logo-dark.png" alt="Scalus Logo" width={400} height={400} style={{ display: 'block', margin: '0 auto' }} />
 
 **Scalus** is a development platform for building decentralized applications (DApps) on the Cardano blockchain. It provides a unified environment where developers can write both on-chain smart contracts and off-chain logic using [Scala 3](/docs/language-guide/scala3) - a modern, expressive, and type-safe functional programming language.
 
-## Meet Scalus
+## Quick Start
 
-- Write Cardano smart contracts in Scala 3 that compile to UPLC
-- Maintain fine-grained control over generated on-chain code with [advanced optimisations](/docs/advanced)
-- Build and evaluate transactions off-chain
+<Cards>
+  <Cards.Card title="Installation Guide" href="/docs/getting-started" />
+  <Cards.Card title="First Smart Contract" href="/docs/smart-contract/developing-smart-contracts" />
+  <Cards.Card title="Examples Repository" href="https://github.com/nau/scalus/tree/master/scalus-examples" />
+</Cards>
+
+## Why Scalus?
+
+**One Language, Full Stack** - Write smart contracts and application logic in Scala 3. No context switching between Plutus/Haskell for contracts and JavaScript/Python for frontends.
+
+**Type-Safe by Design** - Catch errors at compile time, not on-chain. Leverage Scala's powerful type system to prevent entire classes of bugs before deployment.
+
+**Professional Tooling** - Debug validators with breakpoints in IntelliJ IDEA or VS Code. Step through execution, inspect variables, and use the tools you already know.
+
+**Battle-Tested Ecosystem** - Built on the JVM with access to thousands of proven libraries. Use ScalaTest for testing, Akka for concurrency, and the entire Scala ecosystem.
+
+**Fine-Grained Control** - Advanced optimizations give you control over generated UPLC code. Reduce script size and execution costs with macros, inline optimizations, and direct Script Context access.
+
+## Complete Development Lifecycle
+
+- [Write Cardano smart contracts](/docs/smart-contract/developing-smart-contracts) in Scala 3 that compile to UPLC
+- Optimize on-chain code with [advanced optimisation techniques](/docs/smart-contract/optimisations)
+- [Debug Smart contracts](docs/smart-contract/debugging) as regular Scala code with your IDE's debugger
+- Build and evaluate transactions off-chain with the transaction builder
 - Integrate on-chain and off-chain components in your full-stack application
-- Test your entire application with unit, integration, and property-based tests
-- Debug your solution on a testnet
-- Build and deploy production-ready application to mainnet
+- [Test your entire application](docs/smart-contract/testing) with unit, integration, and property-based tests
+- Verify your solution on a testnet with the familiar tools
+- Deploy production-ready applications to mainnet with confidence
 
+## Developer Experience First
 
-Enjoy a modern development experience with excellent IDE support, and the [extensive Scala](https://index.scala-lang.org/) & JVM ecosystems.
+Enjoy a modern development experience with excellent IDE support, comprehensive testing tools, and the [extensive Scala](https://index.scala-lang.org/) & JVM ecosystems.
 
 Say goodbye to juggling multiple languages, libraries, and tools—meet Scalus, a development platform made for professionals and businesses who want to get things done.
+
+## Get Started
+
+Ready to build? [Write your first smart contract](/docs/smart-contract/developing-smart-contracts) or explore the [examples repository](https://github.com/nau/scalus/tree/master/scalus-examples) to see Scalus in action.
+
 
 {/*
 
